--- a/kiskBirth2503/html/main01.html
+++ b/kiskBirth2503/html/main01.html
@@ -78,6 +78,16 @@
                         <th id="yellow">Matter</th>
                     </tr>
                     <tr>
+                        <td>18:20</td>
+                        <td>Meeting</td>
+                        <td>ゆみ宅集合 ヘアセット</td>
+                    </tr>
+                    <tr>
+                        <td>18:40</td>
+                        <td>Move</td>
+                        <td>駅に移動</td>
+                    </tr>
+                    <tr>
                         <td>08:59</td>
                         <td>Train</td>
                         <td>浦和(高崎線：平塚行) 発
@@ -110,7 +120,7 @@
                     <tr>
                         <td>12:30</td>
                         <td>Launch</td>
-                        <td>Coming soon...</td>
+                        <td>Lunch is at a nearby aeon, depending on the mood of the day.</td>
                     </tr>
                     <tr>
                         <td>14:00</td>
