--- a/kiskBirth2503/html/main02.html
+++ b/kiskBirth2503/html/main02.html
@@ -14,8 +14,9 @@
 
         <!-- 外部ファイルの読み込み -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-        <!-- 画像はgoogledriveから、cssはdropboxから取得する -->
-        <link rel="stylesheet" href="https://dl.dropboxusercontent.com/scl/fi/rfnct7a12gfwqribjlpw0/main.css?rlkey=m85bbyp4jhd1eqogg82dp0rcs&st=v3447ez1">
+        <!-- cssをdropboxから取得する場合 -->
+        <!-- <link rel="stylesheet" href="https://dl.dropboxusercontent.com/scl/fi/rfnct7a12gfwqribjlpw0/main.css?rlkey=m85bbyp4jhd1eqogg82dp0rcs&st=v3447ez1"> -->
+        <link rel="stylesheet" href="../css/main.css">
 
         <!-- アイコン -->
         <!-- <link rel="shortcut icon" href="【ファイル名.ico】" /> -->
@@ -31,7 +32,7 @@
     <body>
         <header>
             <h1>Happy Birthday Keisuke</h1>
-            <p>2025/3/14</p>
+            <h1>2025/3/14</h1>
         </header>
         <nav>
             <ul>
@@ -77,6 +78,16 @@
                         <th id="yellow">Matter</th>
                     </tr>
                     <tr>
+                        <td>18:20</td>
+                        <td>Meeting</td>
+                        <td>ゆみ宅集合 ヘアセット</td>
+                    </tr>
+                    <tr>
+                        <td>18:40</td>
+                        <td>Move</td>
+                        <td>駅に移動</td>
+                    </tr>
+                    <tr>
                         <td>08:59</td>
                         <td>Train</td>
                         <td>浦和(高崎線：平塚行) 発
@@ -109,11 +120,12 @@
                     <tr>
                         <td>12:30</td>
                         <td>Launch</td>
-                        <td>Coming soon...</td>
+                        <td>Lunch is at a nearby aeon, depending on the mood of the day.</td>
                     </tr>
                     <tr>
                         <td>14:00</td>
-                        <td colspan="2"><div id="gray-blue">Coming soon...</div></td>
+                        <td><div id="gray-blue">Disneyland</div></td>
+                        <td>Happy Birthday Keisuke. Let's go see "Reach for the Stars"!</td>
                     </tr>
                 </table>
             </section>
@@ -122,6 +134,8 @@
         <footer>
             <p>&copy; 20250314</p>
         </footer>
+
+        <!-- <script src="../js/main.js"></script> -->
     </body>
 
 </html>
