念のため暗号化もどき

--- a/kiskBirth2503/html/anbt8ecnu302ntviw/main.html
+++ b/kiskBirth2503/html/anbt8ecnu302ntviw/main.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
         <!-- cssをdropboxから取得する場合 -->
         <!-- <link rel="stylesheet" href="https://dl.dropboxusercontent.com/scl/fi/rfnct7a12gfwqribjlpw0/main.css?rlkey=m85bbyp4jhd1eqogg82dp0rcs&st=v3447ez1"> -->
-        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../../css/main.css">
 
         <!-- アイコン -->
         <!-- <link rel="shortcut icon" href="【ファイル名.ico】" /> -->
@@ -32,7 +32,7 @@
     <body>
         <header>
             <h1>Happy Birthday Keisuke</h1>
-            <h1>2025/3/14</h1>
+            <p>2025/3/14</p>
         </header>
         <nav>
             <ul>
@@ -124,8 +124,7 @@
                     </tr>
                     <tr>
                         <td>14:00</td>
-                        <td><div id="gray-blue">Disneyland</div></td>
-                        <td>Happy Birthday Keisuke. Let's go see "Reach for the Stars"!</td>
+                        <td colspan="2"><div id="gray-blue">Coming soon...</div></td>
                     </tr>
                 </table>
             </section>
@@ -134,8 +133,6 @@
         <footer>
             <p>&copy; 20250314</p>
         </footer>
-
-        <!-- <script src="../js/main.js"></script> -->
     </body>
 
 </html>
