--- a/htmlTmplate2509/html/helloworld.html
+++ b/htmlTmplate2509/html/helloworld.html
@@ -9,5 +9,5 @@
         <main>
         </main>
     </body>
-    <script src="../js/main.js"></script>
+    <script src="../js/helloworld.js"></script>
 </html>
